--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
   "homepage": "https://github.com/overview/overview-word-filter",
   "dependencies": {
     "autoprefixer": "^5.2.0",
+    "bloomfilter": "0.0.16",
     "brfs": "^1.4.0",
     "browserify": "^11.0.0",
-    "coffeeify": "^1.1.0",
     "coffee-script": "^1.9.3",
+    "coffeeify": "^1.1.0",
+    "debug": "^2.2.0",
     "express": "^4.13.1",
     "gulp": "^3.9.0",
     "gulp-batch": "^1.0.5",
@@ -45,6 +47,7 @@
     "gulp-watch": "^4.3.3",
     "jade": "^1.11.0",
     "jquery": "^2.1.4",
+    "lazy.js": "^0.4.0",
     "lodash.template": "^3.6.2",
     "morgan": "^1.6.1",
     "oboe": "^2.1.2",
@@ -53,5 +56,8 @@
     "query-string": "^2.3.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.3.0"
+  },
+  "devDependencies": {
+    "byline": "^4.2.1"
   }
 }
