Squashed commit of the following:
commit 8c93db3bdd44289723f3abfd006d532bee0b0ec7
Author: Adam Hooper <adam@adamhooper.com>
Date:   Tue Jul 28 11:20:47 2015 -0400

    Use a ternary search tree for geonames

    [refs #99043862]

commit b6df0a33051a16b73e9fe73c8bf3ecb840bd26e3
Author: Adam Hooper <adam@adamhooper.com>
Date:   Mon Jul 27 16:56:11 2015 -0400

    Load geonames as gzipped text; use C++ hashtable

commit e16225640c87ee8ff0cd05c285c71551aac72132
Author: Adam Hooper <adam@adamhooper.com>
Date:   Wed Jul 22 19:16:45 2015 -0400

    .gitignore += "geonames.txt". Too big for GitHub.

commit 632078915f413bd7b85ae316e270df8b1c235f06
Author: Adam Hooper <adam@adamhooper.com>
Date:   Wed Jul 22 19:14:48 2015 -0400

    Nix bind() call. 50% speedup.

commit b0ab97798c095804b137b006e34826c8b13ed8a1
Author: Adam Hooper <adam@adamhooper.com>
Date:   Wed Jul 22 19:14:38 2015 -0400

    Use overview-js-bloom-filter. Huge speedup.

commit fcc32496cdd2a1d18bc1787270eb07385137b8cb
Author: Adam Hooper <adam@adamhooper.com>
Date:   Wed Jul 22 10:15:01 2015 -0400

    Okay, we'll just use geonames.txt now.

    Now that we're using ngrams, bloom filters are unviable. See
    https://groups.google.com/d/msg/overview-dev/f5l_mS6_pCI/8aTR-xSWV74J

--- a/package.json
+++ b/package.json
@@ -47,15 +47,18 @@
     "gulp-watch": "^4.3.3",
     "jade": "^1.11.0",
     "jquery": "^2.1.4",
+    "js-native-ternary-buffer-tree": "0.0.2",
     "lazy.js": "^0.4.0",
     "lodash.template": "^3.6.2",
     "morgan": "^1.6.1",
     "oboe": "^2.1.2",
+    "overview-js-bloom-filter": "0.0.2",
     "overview-js-token-bin": "0.0.5",
     "overview-js-tokenizer": "0.0.2",
     "query-string": "^2.3.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.3.0"
+    "watchify": "^3.3.0",
+    "xxhashjs": "^0.1.1"
   },
   "devDependencies": {
     "byline": "^4.2.1"
