--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "coffee-script": "^1.9.3",
     "coffeeify": "^1.1.0",
     "debug": "^2.2.0",
+    "events": "^1.0.2",
     "express": "^4.13.1",
     "gulp": "^3.9.0",
     "gulp-batch": "^1.0.5",
@@ -47,6 +48,7 @@
     "jade": "^1.11.0",
     "jquery": "^2.1.4",
     "js-native-ternary-buffer-tree": "0.0.2",
+    "js-sorted-set": "^0.1.1",
     "lazy.js": "^0.4.0",
     "lodash.template": "^3.6.2",
     "morgan": "^1.6.1",
