Dockerize dev env; add integration tests

--- a/package.json
+++ b/package.json
@@ -27,36 +27,29 @@
   },
   "homepage": "https://github.com/overview/overview-word-filter",
   "dependencies": {
-    "autoprefixer": "^5.2.0",
-    "brfs": "^1.4.0",
-    "browserify": "^11.0.0",
-    "coffee-script": "^1.9.3",
-    "coffeeify": "^1.1.0",
-    "debug": "^2.2.0",
-    "events": "^1.0.2",
+    "coffeescript": "^2.1.1",
+    "debug": "^3.1.0",
     "express": "^4.13.1",
-    "gulp": "^3.9.0",
-    "gulp-batch": "^1.0.5",
-    "gulp-buffer": "0.0.2",
-    "gulp-less": "^3.0.3",
-    "gulp-minify-css": "^1.2.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-postcss": "^5.1.9",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-util": "^3.0.6",
-    "gulp-watch": "^4.3.3",
-    "jade": "^1.11.0",
-    "jquery": "^2.1.4",
     "js-native-ternary-buffer-tree": "0.1.0",
     "js-sorted-set": "^0.2.0",
-    "lazy.js": "^0.4.0",
-    "lodash.template": "^3.6.2",
     "morgan": "^1.6.1",
-    "numeral": "^1.5.3",
     "oboe": "^2.1.2",
-    "overview-js-token-bin": "0.0.5",
-    "query-string": "^2.3.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.3.0"
+    "overview-js-token-bin": "0.0.5"
+  },
+  "devDependencies": {
+    "base64-inline-loader": "^1.1.0",
+    "coffee-loader": "^0.9.0",
+    "css-loader": "^0.28.8",
+    "events": "^1.1.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^2.30.1",
+    "jquery": "^3.2.1",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
+    "lodash.template": "^4.4.0",
+    "numeral": "^2.0.6",
+    "style-loader": "^0.19.1",
+    "uglifyjs-webpack-plugin": "^1.1.6",
+    "webpack": "^3.10.0"
   }
 }
