--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.4",
   "description": "Overview plugin that filters words, looking for entities",
   "main": "server.js",
-  "scripts": {
-    "test": "mocha"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/overview/overview-word-filter.git"
@@ -40,16 +37,17 @@
     "base64-inline-loader": "^1.1.1",
     "coffee-loader": "^0.9.0",
     "css-loader": "^0.28.11",
-    "events": "^1.1.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "html-webpack-plugin": "^2.30.1",
+    "events": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
-    "less": "^2.7.3",
+    "less": "^3.0.2",
     "less-loader": "^4.1.0",
     "lodash.template": "^4.4.0",
+    "mini-css-extract-plugin": "^0.4.0",
     "numeral": "^2.0.6",
-    "style-loader": "^0.19.1",
+    "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack": "^3.11.0"
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15"
   }
 }
