s/less/sass -- fixes GitHub dependency security warning

--- a/package.json
+++ b/package.json
@@ -40,11 +40,12 @@
     "events": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
-    "less": "^3.0.2",
     "less-loader": "^4.1.0",
     "lodash.template": "^4.4.0",
     "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "^4.9.0",
     "numeral": "^2.0.6",
+    "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.6.0",
