--- a/package.json
+++ b/package.json
@@ -24,10 +24,9 @@
   },
   "homepage": "https://github.com/overview/overview-word-filter",
   "dependencies": {
-    "coffeescript": "^2.2.4",
     "debug": "^3.1.0",
     "express": "^4.16.3",
-    "js-native-ternary-buffer-tree": "0.1.0",
+    "js-native-ternary-buffer-tree": "^0.2.0",
     "js-sorted-set": "^0.2.0",
     "morgan": "^1.6.1",
     "oboe": "^2.1.2",
@@ -35,20 +34,17 @@
   },
   "devDependencies": {
     "base64-inline-loader": "^1.1.1",
-    "coffee-loader": "^0.9.0",
-    "css-loader": "^0.28.11",
+    "css-loader": "^3.4.2",
     "events": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
-    "less-loader": "^4.1.0",
     "lodash.template": "^4.4.0",
-    "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.9.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
     "numeral": "^2.0.6",
-    "sass-loader": "^7.0.1",
-    "style-loader": "^0.21.0",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.15"
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   }
 }
