--- a/integration-test/config
+++ b/integration-test/config
@@ -11,16 +11,16 @@ DOCKER_COMPOSE_PROJECT_NAME=overviewintegrationtester
 # will not destroy this; they will use it when calling `run` and
 # `run-browser`.
 #
-# The default, "overviewserver", is what you get when you run `./dev` after
+# The default, "overview-server", is what you get when you run `./dev` after
 # `git clone https://github.com/overview/overview-server.git`.
 #
 # Another sensible name here would be "overviewlocal". Decide your project's
 # development process early: it's a pain for every developer when you change.
-DEVELOPMENT_PROJECT_NAME=overviewserver
+DEVELOPMENT_PROJECT_NAME=overview-server
 
 # Docker container version. We use semantic versioning; only the major version
 # matters, but you can be paranoid and add minor and patch versions, too.
-OVERVIEW_INTEGRATION_TESTER_VERSION=1.0.4
+OVERVIEW_INTEGRATION_TESTER_VERSION=2.0.0
 
 # Version of Overview to test against in `run-in-docker-compose`. See
 # https://hub.docker.com/r/overview/overview-database/tags/ for options.
